--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<logbook-spring-boot-starter.version>2.14.0</logbook-spring-boot-starter.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,7 +38,7 @@
 		<dependency>
 			<groupId>org.zalando</groupId>
 			<artifactId>logbook-spring-boot-starter</artifactId>
-			<version>2.14.0</version>
+			<version>${logbook-spring-boot-starter.version}</version>
 		</dependency>
 
 		<dependency>
